k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: brainlens
  labels:
    name: brainlens
    app: brainlens
